--- a/CoderNik GameEngine.vcxproj
+++ b/CoderNik GameEngine.vcxproj
@@ -146,13 +146,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Actor.cpp" />
-    <ClCompile Include="Asteroid.cpp" />
+    <ClCompile Include="CameraActor.cpp" />
     <ClCompile Include="Component.cpp" />
+    <ClCompile Include="Cube.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="InputComponent.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Math.cpp" />
     <ClCompile Include="Mesh.cpp" />
+    <ClCompile Include="MeshComponent.cpp" />
     <ClCompile Include="MoveComponent.cpp" />
     <ClCompile Include="Random.cpp" />
     <ClCompile Include="Renderer.cpp" />
@@ -164,12 +166,14 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Actor.h" />
-    <ClInclude Include="Asteroid.h" />
+    <ClInclude Include="CameraActor.h" />
     <ClInclude Include="Component.h" />
+    <ClInclude Include="Cube.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="InputComponent.h" />
     <ClInclude Include="Math.h" />
     <ClInclude Include="Mesh.h" />
+    <ClInclude Include="MeshComponent.h" />
     <ClInclude Include="MoveComponent.h" />
     <ClInclude Include="Random.h" />
     <ClInclude Include="Renderer.h" />
@@ -182,10 +186,19 @@
   <ItemGroup>
     <Image Include="Assets\Sprites\Asteroid.png" />
     <Image Include="Assets\Sprites\Ship.png" />
+    <Image Include="Assets\Textures\Cube.png" />
+    <Image Include="Assets\Textures\Default.png" />
+    <Image Include="Assets\Textures\Plane.png" />
+    <Image Include="Assets\Textures\Sphere.png" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Assets\Meshes\Cube.gpmesh" />
+    <None Include="Assets\Meshes\Plane.gpmesh" />
+    <None Include="Assets\Meshes\Sphere.gpmesh" />
     <None Include="Shaders\Basic.frag" />
     <None Include="Shaders\Basic.vert" />
+    <None Include="Shaders\BasicMesh.frag" />
+    <None Include="Shaders\BasicMesh.vert" />
     <None Include="Shaders\Sprite.frag" />
     <None Include="Shaders\Sprite.vert" />
     <None Include="Shaders\Transform.vert" />
